@@ -69,6 +69,7 @@
  * #912 (Wrong description of Histogram constructor parameters)
  * #914 (KarhunenLoeveQuadratureAlgorithm crashes for covariance models of dimension>1)
  * #917 (Bug in RandomMixture::computeCDF())
+ * #919 (Wrong simplification mechanism in MarginalTransformationEvaluation for Exponential distribution)
 
 == 1.9 release (2017-04-18) == #release-1.9
 
